--- a/alura-flip LMML2/index.html
+++ b/alura-flip LMML2/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <div class="passo ativo" id="passo-0">
-      <img src="img/cenario-passo0.png" alt="">
+      <img src="https://lens.usercontent.google.com/image?vsrid=COiUgYfRl8zWsgEQAhgBIiQzMjdkNmNhOC00MGVkLTQ5NDItYjg4OC03YTk3MTZhYmIyMmEyBiICY2coAjiRruyvvd2QAw&gsessionid=sArzhi1zohszxrl_fe0S1qzAhC6pQ4mE-hGHnClX6oSroHp8zpi_Tg" alt="">
       <p>Um dia desses, dentro de um livro da biblioteca da escola, descobri uma carta antiga sobre uma cidade perdida,
         escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade
         e eu decidi segui-las!</p>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="passo" id="passo-4"> 
-      <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura"> 
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.pngtree.com%2Ffreebackground%2F3d-illustration-of-outdoor-lounge-design-with-blurred-forest-background-and-mysterious-black-shadow_10520946.html&psig=AOvVaw31UOHhK91U2I64nB7e6tWT&ust=1762517053337000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMCEku-93ZADFQAAAAAdAAAAABAE" alt="imagem voltando para casa e desitindo da aventura"> 
     <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria encontrado.</p>    
     </div>
 
