alterei uma letra

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>Predador</h1>
-            <p>#hpredador</p>
+            <p>#predador</p>
         </div>
 
         <div>
